--- a/templates/result.html
+++ b/templates/result.html
@@ -204,55 +204,16 @@
     </style>
   </head>
   <body>
-    <div class="testbox">
-      <form action="/result" method="POST">
-        <div class="banner">
+         
+		<div class="banner">
           <h1>Diabetes Prediction</h1>
         </div>
-        <br/>
-        <fieldset>
-          <legend>Patient Information</legend>
-          <div class="item">
-            <label for="Pregnancies">Pregnancies : <span>*</span></label>
-            <input type="text" id="Pregnancies" name="Pregnancies" required/>
-          </div>
-          <div class="item">
-            <label for="Glucose">Glucose : <span>*</span></label>
-            <input type="text" id="Glucose" name="Glucose" required/>
-          </div>
-          <div class="item">
-            <label for="BloodPressure">BloodPressure : <span>*</span></label>
-            <input type="text" id="BloodPressure" name="BloodPressure" required/>
-          </div>
-          <div class="item">
-            <label for="SkinThickness">SkinThickness : <span>*</span></label>
-            <input type="text" id="SkinThickness" name="SkinThickness" required/>
-          </div>
-          <div class="item">
-            <label for="Insulin">Insulin : <span>*</span></label>
-            <input type="text" id="Insulin" name="Insulin" required/>
-          </div>
-          <div class="item">
-            <label for="BMI">BMI : <span>*</span></label>
-            <input type="text" id="BMI" name="BMI" required/>
-          </div>
-		  <div class="item">
-			<label for="DiabetesPedigreeFunction">DiabetesPedigreeFunction : <span>*</span></label>
-			<input type="text" id="DiabetesPedigreeFunction" name="DiabetesPedigreeFunction" required/>
-		  </div>
-		  <div class="item">
-			<label for="Age">Age : <span>*</span></label>
-			<input type="text" id="Age" name="Age" required/>
-		  </div>
           
-        </fieldset>
-        <br/>
+       <h1> {{ prediction }}</h1>
+            
+            
         
-        <div class="btn-block">
-          <button type="submit" value="Submit">Submit</button>
-        </div>
-      </form>
-    </div>
+    
 	
 	<footer id="main-footer">
       Copyright &copy; 2020
