--- a/templates/home.html
+++ b/templates/home.html
@@ -205,7 +205,7 @@
   </head>
   <body>
     <div class="testbox">
-      <form action="{{ url_for('predict')}}" method="POST"> <!--/result-->
+      <form action="{{ url_for('predict')}}" method="post"> <!--/result-->
         <div class="banner">
           <h1>Diabetes Prediction</h1>
         </div>
