--- a/templates/result.html
+++ b/templates/result.html
@@ -209,7 +209,7 @@
           <h1>Diabetes Prediction</h1>
         </div>
           
-       <h1> {{ prediction }}</h1>
+       <h1> {{ prediction_text }}</h1>
             
             
         
