--- a/templates/result.html
+++ b/templates/result.html
@@ -208,9 +208,15 @@
 		<div class="banner">
           <h1>Diabetes Prediction</h1>
         </div>
-          
-       <h1> {{ prediction }}</h1>
-            
+         <div> 
+        {% if prediction==1 %}
+		<h1>Prediction: <span class='danger'>Oops! You have DIABETES.</span></h1>
+		<img class="gif" src="{{ url_for('static', filename='diabetes.webp') }}" alt="Diabetes Image">
+	{% elif prediction==0 %}
+		<h1>Prediction: <span class='safe'>Great! You DON'T have diabetes.</span></h1>
+		<img class="gif1" src="{{ url_for('static', filename='no-diabetes.webp') }}" alt="Not Diabetes Image">
+	{% endif %}
+	  </div>   
             
         
     
