--- a/templates/result.html
+++ b/templates/result.html
@@ -36,6 +36,15 @@
       z-index: 2;
       line-height: 83px;
       }
+	.result {
+      position: relative;
+      height: 100px;
+      background-size: cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      }    
       textarea {
       width: calc(100% - 12px);
       padding: 5px;
@@ -208,7 +217,8 @@
 		<div class="banner">
           <h1>Diabetes Prediction</h1>
         </div>
-         <div> 
+         <div class="result"> 
+		 <fieldset>
         {% if prediction==1 %}
 		<h1>Prediction: <span class='danger'>Oops! You have DIABETES.</span></h1>
 		<img class="jpeg" src="{{ url_for('static', filename='diabetes.jpg') }}" alt="Diabetes Image" width="900" height="300" style="vertical-align:middle">
@@ -216,6 +226,7 @@
 		<h1>Prediction: <span class='safe'>Great! You DON'T have diabetes.</span></h1>
 		<img class="jpeg" src="{{ url_for('static', filename='no-diabetes.jpg') }}" alt="Not Diabetes Image" width="900" height="300" style="vertical-align:middle">
 	{% endif %}
+		 </fieldset>
 	  </div>   
             
         
