--- a/templates/result.html
+++ b/templates/result.html
@@ -212,7 +212,7 @@
     </style>
   </head>
   <body>
-         
+         <div class="testbox">
 		<div class="banner">
           <h1>Diabetes Prediction</h1>
         </div>
@@ -228,7 +228,7 @@
 		 </fieldset>
 	  </div>   
             
-        
+	  </div>
     
 	
 	<footer id="main-footer">
