--- a/templates/result.html
+++ b/templates/result.html
@@ -218,14 +218,15 @@
         </div>
          <div class="result"> 
 		 <fieldset>
+			 <legend> Prediction </legend>
         {% if prediction==1 %}
-			 <h2 style="color:Black;">Prediction:</h2>
+			 <!--<h2 style="color:Black;">Prediction:</h2>-->
 			 <h3 style="color:Red">
 				 <span class='danger'>Oops! You have DIABETES.
 				 </span></h3>
 		<!--<img class="jpeg" src="{{ url_for('static', filename='diabetes.jpg') }}" alt="Diabetes Image" width="900" height="300" style="vertical-align:middle">-->
 	{% elif prediction==0 %}
-			 <h2 style="color:Black;">Prediction: </h2>
+			 <!--<h2 style="color:Black;">Prediction: </h2>-->
 			 <h3 style="color:Green;">
 				 <span class='safe'>Great! You DON'T have diabetes.
 				 </span></h3>
