--- a/templates/result.html
+++ b/templates/result.html
@@ -220,11 +220,8 @@
         </div>
         <br/>
         <fieldset>
-          <legend>Patient Information</legend>
-          <div class="item">
-            <label for="Pregnancies">Pregnancies : <span>*</span></label>
-            <input type="text" id="Pregnancies" name="Pregnancies" required/>
-          </div>
+          <legend>Predictions</legend>
+          Here will be the prediction.
           
         </fieldset>
         <br/>
