--- a/templates/result.html
+++ b/templates/result.html
@@ -222,7 +222,20 @@
         <fieldset>
           <legend>Predictions</legend>
           Here will be the prediction.
-          
+           {% if prediction==1 %}
+			 <h2 style="color:Red;">We are Sorry!</h2>
+			 <h3 style="color:Grey">
+				 <span class='danger'>You have DIABETES.
+				 </span>
+			 </h3>
+	   {% elif prediction==0 %}
+			 <h2 style="color:Green;">Congratulations! </h2>
+			 <h3 style="color:Grey;">
+				 <span class='safe'>You DO NOT have diabetes.
+				 </span>
+			 </h3>
+	   {% endif %}
+
         </fieldset>
         <br/>
         
