--- a/templates/result.html
+++ b/templates/result.html
@@ -221,16 +221,16 @@
         <br/>
         <fieldset>
           <legend>Predictions</legend>
-          Here will be the prediction.
+          
            {% if prediction==1 %}
-			 <h2 style="color:Red;">We are Sorry!</h2>
-			 <h3 style="color:Grey">
+			 <h2 style="color:Red; text-align:center;">We are Sorry!</h2>
+			 <h3 style="color:Grey text-align: center;">
 				 <span class='danger'>You have DIABETES.
 				 </span>
 			 </h3>
 	   {% elif prediction==0 %}
-			 <h2 style="color:Green;">Congratulations! </h2>
-			 <h3 style="color:Grey;">
+			 <h2 style="color:Green; text-align: center;">Congratulations! </h2>
+			 <h3 style="color:Grey; text-align: center;">
 				 <span class='safe'>You DO NOT have diabetes.
 				 </span>
 			 </h3>
