--- a/templates/result.html
+++ b/templates/result.html
@@ -223,14 +223,14 @@
           <legend>Predictions</legend>
           
            {% if prediction==1 %}
-			 <h2 style="color:Red; text-align:center;">We are Sorry!</h2>
-			 <h3 style="color:Grey; text-align:center;">
+			 <h2 style="color:Red;">We are Sorry!</h2>
+			 <h3 style="color:Grey;">
 				 <span class='danger'>You have DIABETES.
 				 </span>
 			 </h3>
 	   {% elif prediction==0 %}
-			 <h2 style="color:Green; text-align:center;">Congratulations! </h2>
-			 <h3 style="color:Grey; text-align:center;">
+			 <h2 style="color:Green;">Congratulations! </h2>
+			 <h3 style="color:Grey;">
 				 <span class='safe'>You DO NOT have diabetes.
 				 </span>
 			 </h3>
