--- a/templates/result.html
+++ b/templates/result.html
@@ -36,14 +36,6 @@
       z-index: 2;
       line-height: 83px;
       }
-	.result {
-      position: relative;
-      height: 100px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      }    
       textarea {
       width: calc(100% - 12px);
       padding: 5px;
@@ -212,39 +204,32 @@
     </style>
   </head>
   <body>
-         
-		<div class="testbox">
-      
+    <div class="testbox">
+      <form action="{{ url_for('predict')}}" method="post"> <!--/result-->
         <div class="banner">
           <h1>Diabetes Prediction</h1>
         </div>
         <br/>
         <fieldset>
-          <legend>Predictions</legend>
-          
-           {% if prediction==1 %}
+          <legend>Prediction</legend>
+		Here will be the Prediction
+          {% if prediction==1 %}
 			 <h2 style="color:Red;">We are Sorry!</h2>
-			 <h3 style="color:Grey;">
+			 <h3 style="color:Grey">
 				 <span class='danger'>You have DIABETES.
-				 </span>
-			 </h3>
-	   {% elif prediction==0 %}
+				 </span></h3>
+	  {% elif prediction==0 %}
 			 <h2 style="color:Green;">Congratulations! </h2>
 			 <h3 style="color:Grey;">
 				 <span class='safe'>You DO NOT have diabetes.
-				 </span>
-			 </h3>
-	   {% endif %}
-
+				 </span></h3>
+	  {% endif %}      
         </fieldset>
         <br/>
         
         
-      
+      </form>
     </div>
-            
-	  
-    
 	
 	<footer id="main-footer">
       Copyright &copy; 2020
